<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/widget109"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/bg3"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<TableRow
android:id="@+id/widget110"
android:layout_width="fill_parent"
android:layout_height="50px"
android:orientation="horizontal"
>
<ImageView
android:id="@+id/widget111"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/chotatools"
>
</ImageView>
<TextView
android:id="@+id/widget112"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:layout_marginLeft="50px"
android:text="@string/menu3"
android:textColor="@color/black_text_color"
android:gravity="center_vertical"
android:textStyle="bold"
android:textSize="20sp">
>
</TextView>
</TableRow>
<ScrollView
android:id="@+id/widget113"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>
<TableLayout
android:id="@+id/widget59"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
>
<TableRow
android:id="@+id/widget60"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
<TextView
android:id="@+id/widget89"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/settings_menu_1"
android:textColor="@color/black_text_color"
android:textSize="18sp" android:layout_marginTop="15sp">
</TextView>
</TableRow>
<TableRow
android:id="@+id/widget61"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
<Spinner
android:id="@+id/widget98"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
>
</Spinner>
</TableRow>
<TableRow
android:id="@+id/widget71"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>

</TableRow>
<TableRow
android:id="@+id/widget72"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>

</TableRow>
<TableRow
android:id="@+id/widget76"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>

</TableRow>
<TableRow
android:id="@+id/widget77"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>

</TableRow>
<TableRow
android:id="@+id/widget78"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>

</TableRow>
<TableRow
android:id="@+id/widget81"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:layout_marginTop="20sp">
<CheckBox
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/settings_menu_6"
android:textColor="@color/black_text_color"
android:textSize="18sp"
android:id="@+id/wallpaper" android:checked="true">
</CheckBox>
</TableRow>
<TableRow
android:id="@+id/widget83"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
<CheckBox
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/settings_menu_7"
android:textColor="@color/black_text_color"
android:textSize="18sp"
android:id="@+id/theme" android:checked="true">
</CheckBox>
</TableRow>
<TableRow
android:id="@+id/widget86"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:layout_width="wrap_content" android:weightSum="3">

<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Save" android:layout_marginTop="15sp" android:gravity="center" android:layout_gravity="center" android:id="@+id/save" android:layout_weight="1"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15sp" android:gravity="center" android:layout_gravity="center" android:layout_weight="1" android:text="Cancel" android:id="@+id/cancel"></Button>

</TableRow>
<TableRow
android:id="@+id/widget85"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
</TableRow>

</TableLayout>
</ScrollView>
</LinearLayout>


